@@ -1162,11 +1162,12 @@ dnl AC_CHECK_TOOL(AR, ar)
 	    AS_IF([test "${TCL_THREADS}" = "1" -a "$GCC" != "yes"], [
 		# AIX requires the _r compiler when gcc isn't being used
 		case "${CC}" in
-		    *_r)
+		    *_r|*_r\ *)
 			# ok ...
 			;;
 		    *)
-			CC=${CC}_r
+			# Make sure only first arg gets _r
+		    	CC=`echo "$CC" | sed -e 's/^\([[^ ]]*\)/\1_r/'`
 			;;
 		esac
 		AC_MSG_RESULT([Using $CC for compiling with threads])
@@ -3011,7 +3012,7 @@ AC_DEFUN([SC_TCL_GETHOSTBYNAME_R], [AC_CHECK_FUNC(gethostbyname_r, [
 #--------------------------------------------------------------------
 # SC_TCL_GETADDRINFO
 #
-#	Check if we have 'getaddrinfo'
+#	Check if we have 'getaddrinfo' for hostname lookup and inet6/ipv6
 #
 # Arguments:
 #	None
